Update ports, style and fix transaction deserialization.

--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -106,7 +106,7 @@
                     <h4 style="margin: 0px">Prove to someone that you have sent them Ombre in this transaction</h4>
                     <h5 style="margin: 0px">
                         Tx private key can be obtained using <i>get_tx_key</i>
-                        command in  <i>monero-wallet-cli</i> command line tool
+                        command in  <i>ombre-wallet-cli</i> command line tool
                         <br/>
                         Note: address and tx private key are sent to the server, as the calculations are done on the server side
                     </h5>
