--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,7 @@
+</div>
+</div>
+</div>
+
 <div class="center">
     <h6 style="margin-top:10px">
         <a href="https://github.com/moneroexamples/onion-monero-blockchain-explorer">source code</a>
