--- a/src/templates/block.html
+++ b/src/templates/block.html
@@ -14,7 +14,7 @@
 
 
 
-    <table class="center">
+    <table class="table center">
         <tr>
             <td>Timestamp [UCT] (epoch):</td><td>{{blk_timestamp}} ({{blk_timestamp_epoch}})</td>
             <td>Age {{age_format}}:</td><td>{{blk_age}}</td>
@@ -71,7 +71,7 @@
                     <td>{{sum_outputs}}</td>
                     <td>{{tx_fee}}</td>
                     <td>{{mixin}}</td>
-                    <td>{{no_inputs}}/{{no_outputs}}</td>                    
+                    <td>{{no_inputs}}/{{no_outputs}}</td>
                     <td>{{tx_size}}</td>
                     <td>{{version}}</td>
                 </tr>
