--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,23 +11,47 @@
     <style type="text/css">
         {{#css_styles}}{{/css_styles}}
     </style>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-<div>
 
-    <div class="center">
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand page-scroll" href="/">
+          <i class="fa fa-circle sumo-orange"></i> Ombre Explorer
+        </a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+
+              <li>
+                <form action="/search" method="get" style="width:100%; margin-top:15px" class="style-1">
+                <input type="text" name="value" size="120" placeholder="block height, block hash, transaction hash">
+                <input type="submit" value="Search">
+                </form>
+              </li>
+      </div>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-8">
+
+      <div class="center">
         <h1 class="center"><a href="/">Ombre Blockchain Explorer</a></h1>
-        <h4 style="font-size: 15px; margin: 0px">(no javascript - no cookies - no web analytics trackers - no images - open sourced)</h4>
-    </div>
-
-
-    <div class="center">
-        <form action="/search" method="get" style="width:100%; margin-top:15px" class="style-1">
-            <input type="text" name="value" size="120"
-                   placeholder="block height, block hash, transaction hash">
-            <input type="submit" value="Search">
-        </form>
-    </div>
-
-</div>
+      </div>
