--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -57,29 +57,35 @@
 
     {{{mempool_info}}}
 
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
     {{#is_page_zero}}
       <h2 style="margin-bottom: 0px">Transactions in the last {{no_of_last_blocks}} blocks</h2>
     {{/is_page_zero}}
     {{^is_page_zero}}
       <h2 style="margin-bottom: 0px">Transactions in older blocks<!--(height: {{height}})--></h2>
     {{/is_page_zero}}
+      <h4 style="font-size: 14px; margin-top: 0px">(Median size of these blocks: {{blk_size_median}} kB)</h4>
+    </div>
 
-    <h4 style="font-size: 14px; margin-top: 0px">(Median size of these blocks: {{blk_size_median}} kB)</h4>
+    <div class="panel-body">
+      <div class="center">
 
-    <div class="center">
-
-            <table class="center">
+            <table class="table center">
+                <thead>
                 <tr>
-                    <td>height</td>
-                    <td>age {{age_format}}<!--(Δm)--></td>
-                    <td>size [kB]<!--(Δm)--></td>
-                    <td>tx hash</td>
-                    <td>fees</td>
-                    <td>outputs</td>
-                    <td>in(nonrct)/out</td>
-                    <td>ring size</td>
-                    <td>tx size [kB]</td>
+                    <th>height</td>
+                    <th>age {{age_format}}<!--(Δm)--></th>
+                    <th>size [kB]<!--(Δm)--></th>
+                    <th>tx hash</th>
+                    <th>fees</th>
+                    <th>outputs</th>
+                    <th>in(nonrct)/out</th>
+                    <th>ring size</th>
+                    <th>tx size [kB]</th>
                 </tr>
+                <thead>
                 {{#txs}}
                 <tr>
                     <td><a href="/block/{{height}}">{{height}}</a></td>
@@ -104,6 +110,7 @@
                 | <a href="/page/{{next_page}}">next page</a>
             </div>
 
+      </div>
     </div>
 
 
