--- a/src/templates/my_outputs.html
+++ b/src/templates/my_outputs.html
@@ -1,34 +1,44 @@
 
 <div>
 
-    <H4 style="margin:5px">Tx hash: <a href="/tx/{{tx_hash}}">{{tx_hash}}</a></H4>
-    <H5 style="margin:5px">Tx public key: {{tx_pub_key}}</H5>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">Transaction details</div>
+    <div class="panel-body">
+      <H4 style="margin:5px">Tx hash: <a href="/tx/{{tx_hash}}">{{tx_hash}}</a></H4>
+      <H4 style="margin:5px">Tx public key: {{tx_pub_key}}</H4>
 
 
-    {{#has_payment_id}}
-        <H5 style="margin:5px">Payment id: {{payment_id}}</H5>
-    {{/has_payment_id}}
+      {{#has_payment_id}}
+          <H5 style="margin:5px">Payment id: {{payment_id}}</H5>
+      {{/has_payment_id}}
 
-    {{#has_payment_id8}}
-        {{^decrypted_payment_id8}}
-            <H5 style="margin:5px">Payment id (encrypted): {{payment_id8}}</H5>
-        {{/decrypted_payment_id8}}
-        {{#decrypted_payment_id8}}
-            <H5 style="margin:5px">Payment id (decrypted): {{decrypted_payment_id8}}</H5>
-        {{/decrypted_payment_id8}}
-    {{/has_payment_id8}}
+      {{#has_payment_id8}}
+          {{^decrypted_payment_id8}}
+              <H5 style="margin:5px">Payment id (encrypted): {{payment_id8}}</H5>
+          {{/decrypted_payment_id8}}
+          {{#decrypted_payment_id8}}
+              <H5 style="margin:5px">Payment id (decrypted): {{decrypted_payment_id8}}</H5>
+          {{/decrypted_payment_id8}}
+      {{/has_payment_id8}}
 
 
-    <table class="center" style="width: 80%; margin-top:10px">
-        <tr>
-            <td>Block: {{blk_height}}</td>
-            <td>Timestamp [UCT]: {{blk_timestamp}}</td>
-            <td>Age [y:d:h:m:s]: {{delta_time}}</td>
-            <td>Fee: {{tx_fee}}</td>
-            <td>Tx size: {{tx_size}} kB</td>
-        </tr>
+      <table class="center" style="width: 80%; margin-top:10px">
+          <tr>
+              <td>Block: {{blk_height}}</td>
+              <td>Timestamp [UCT]: {{blk_timestamp}}</td>
+              <td>Age [y:d:h:m:s]: {{delta_time}}</td>
+              <td>Fee: {{tx_fee}}</td>
+              <td>Tx size: {{tx_size}} kB</td>
+          </tr>
 
-    </table>
+      </table>
+      </div>
+  </div>
 
     {{^tx_prove}}
         <h3>Checking which outputs belong to the given address and viewkey</h3>
@@ -41,31 +51,39 @@
         <h5>Tx private key: {{viewkey}}</h5>
     {{/tx_prove}}
 
-    <h3>Outputs ({{outputs_no}})</h3>
-    <div class="center">
-        <table class="center" >
-            <tr>
-                <td>output public key</td>
-                <td>amount</td>
-                <td>output match?</td>
-            </tr>
-            {{#outputs}}
-            <tr>
-                <td>{{output_idx}}: {{out_pub_key}}</td>
-                <td>{{amount}}</td>
-                {{#mine_output}}
-                <td>
-                        <span style="color: #008009;font-weight: bold">
-                        {{mine_output}}
-                        </span>
-                </td>
-                {{/mine_output}}
-                {{^mine_output}}
-                    <td>{{mine_output}}</td>
-                {{/mine_output}}
-            </tr>
-            {{/outputs}}
-        </table>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>Outputs ({{outputs_no}})</h3>
+      </div>
+      <div class="panel-body">
+      <div class="center table">
+          <table class="center" >
+            <thead>
+              <tr>
+                  <th>output public key</th>
+                  <th>amount</th>
+                  <th>output match?</th>
+              </th>
+            </thead>
+              {{#outputs}}
+              <tr>
+                  <td>{{output_idx}}: {{out_pub_key}}</td>
+                  <td>{{amount}}</td>
+                  {{#mine_output}}
+                  <td>
+                          <span style="color: #008009;font-weight: bold">
+                          {{mine_output}}
+                          </span>
+                  </td>
+                  {{/mine_output}}
+                  {{^mine_output}}
+                      <td>{{mine_output}}</td>
+                  {{/mine_output}}
+              </tr>
+              {{/outputs}}
+          </table>
+      </div>
+      </div>
 
         <h3>
             Sum OMB from matched outputs (i.e., incoming OMB):
@@ -88,8 +106,8 @@
     <input type="checkbox" id="toggle-1">
 
     <div id="decoded-inputs">
-    <h3>Inputs ({{inputs_no}})</h3>
-        <div class="center">
+      <h3>Inputs ({{inputs_no}})</h3>
+        <div class="class center">
             {{#inputs}}
                 <h4>Key image: {{key_image}}, amount {{key_image_amount}}</h4>
                 {{#mixins}}
