--- a/src/templates/partials/tx_table_header.html
+++ b/src/templates/partials/tx_table_header.html
@@ -1,9 +1,11 @@
+<thead>
 <tr>
-        <td>timestamp</td>
-	<td>tx hash</td>
-	<td>outputs</td>
-	<td>fee</td>
-	<td>ring size</td>
-	<td>in/out</td>
-	<td>size [kB]</td>
+  <th scope="col">Timestamp</th>
+	<th scope="col">TX hash</th>
+	<th scope="col">Outputs</th>
+	<th scope="col">Fee</th>
+	<th scope="col">Ring size</th>
+	<th scope="col">In/out</th>
+	<th scope="col">Size [kB]</th>
 </tr>
+</thead>
