--- a/src/templates/mempool.html
+++ b/src/templates/mempool.html
@@ -8,13 +8,13 @@
       <table class="table center">
             <thead>
             <tr>
-                <th>age [h:m:s]</th>
-                <th>transaction hash</th>
-                <th>fee</th>
-                <th>outputs</th>
-                <th>in(nonrct)/out</th>
-                <th>ring size</th>
-                <th>tx size [kB]</th>
+              <th><span class="fa fa-clock-o"></span> age [h:m:s]</th>
+              <th><span class="fa fa-paw"></span> transaction hash</th>
+              <th><span class="fa fa-tag"></span> fee</th>
+              <th><span class="fa fa-money"></span> outputs</th>
+              <th><span class="fa fa-exchange"></span> in/out</th>
+              <th><span class="fa fa-circle-o"></span> mixin</th>
+              <th><span class="fa fa-floppy-o"></span></span> size [kB]</th>
             </tr>
             <thead>
             {{#mempooltxs}}
