--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -72,25 +72,23 @@
     <div class="panel-body">
       <div class="center">
 
-            <table class="table center">
+            <table class="table table-hover table-striped">
                 <thead>
                 <tr>
-                    <th>height</td>
-                    <th>age {{age_format}}<!--(Δm)--></th>
-                    <th>size [kB]<!--(Δm)--></th>
-                    <th>tx hash</th>
-                    <th>fees</th>
-                    <th>outputs</th>
-                    <th>in(nonrct)/out</th>
-                    <th>ring size</th>
-                    <th>tx size [kB]</th>
+                  <th><span class="fa fa-bars"></span> height</td>
+                  <th><span class="fa fa-clock-o"></span> age {{age_format}}<!--(Δm)--></th>
+                  <th><span class="fa fa-paw"></span> tx hash</th>
+                    <th><span class="fa fa-tag"></span> fees</th>
+                    <th><span class="fa fa-money"></span> outputs</th>
+                    <th><span class="fa fa-exchange"></span> in/out</th>
+                    <th><span class="fa fa-circle-o"></span> mixin</th>
+                    <th><i class="fa fa-floppy-o"></i> size [kB]</th>
                 </tr>
                 <thead>
                 {{#txs}}
                 <tr>
                     <td><a href="/block/{{height}}">{{height}}</a></td>
                     <td>{{age}}<!--{{time_delta}}--></td>
-                    <td>{{blk_size}}</td>
                     <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                     <td>{{tx_fee_short}}</td>
                     <td>{{sum_outputs_short}}</td>
