--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -65,7 +65,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-        <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} OMB</h3>
+        {{outputs_no}} output(s) for total of {{outputs_xmr_sum}} OMB
   </div>
     <div class="panel-body">
       <div class="center">
