--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -1,5 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
 @import url(//fonts.googleapis.com/css?family=Roboto:400,300,500);
+@import url(//fonts.googleapis.com/css?family=Montserrat:400,700);
 
 body {
   font-size: 14px;
@@ -199,4 +200,9 @@ th {
 	font-weight: bold;
 }
 
-
+.panel-heading {
+    color: #fff;
+    background-color: #333;
+    border-color: #333;
+    font-size: 16px;
+}
