--- a/src/templates/mempool.html
+++ b/src/templates/mempool.html
@@ -1,8 +1,8 @@
 
 <div class="panel panel-default">
    <div class="panel-heading">
-     <h2>Transaction pool</h2>
-     <h4 style="font-size: 12px; margin-top: 0px">(no of txs: {{mempool_size}}, size: {{mempool_size_kB}} kB, updated every {{ mempool_refresh_time }} seconds)</h4>
+     Transaction pool
+     <small>(no of txs: {{mempool_size}}, size: {{mempool_size_kB}} kB, updated every {{ mempool_refresh_time }} seconds)</small>
    </div>
    <div class="panel-body">
       <table class="table center">
