--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -1,8 +1,6 @@
 
 <div class="center">
      <h3 style="font-size: 12px; margin-top: 20px">
-
-        Server time: {{server_timestamp}}  | <a href="/txpool">Transaction pool</a>
          {{#enable_pusher}}
             | <a href="/rawtx">Transaction pusher </a>
          {{/enable_pusher}}
@@ -66,11 +64,11 @@
     {{^is_page_zero}}
       Transactions in older blocks<!--(height: {{height}})-->
     {{/is_page_zero}}
-      <small>(Median size of these blocks: {{blk_size_median}} kB)</small>
+    <br><small>(Median size of these blocks: {{blk_size_median}} kB)</small>
     </div>
 
     <div class="panel-body">
-      <div class="center">
+      <div class="table-responsive center">
 
             <table class="table table-hover table-striped">
                 <thead>
