--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -68,7 +68,7 @@
         {{outputs_no}} output(s) for total of {{outputs_xmr_sum}} OMB
   </div>
     <div class="panel-body">
-      <div class="center">
+      <div class="table-responsive center">
           <table class="table center">
             <thead>
               <tr>
