--- a/src/templates/block.html
+++ b/src/templates/block.html
@@ -13,70 +13,96 @@
     {{/have_next_hash}}
 
 
+    <div class="panel panel-default">
+      <div class="panel-heading">
+         Block details
+      </div>
+      <div class="panel-body">
+        <div class="table-responsive center">
 
-    <table class="table center">
-        <tr>
-            <td>Timestamp [UCT] (epoch):</td><td>{{blk_timestamp}} ({{blk_timestamp_epoch}})</td>
-            <td>Age {{age_format}}:</td><td>{{blk_age}}</td>
-            <td>Δ [h:m:s]:</td><td>{{delta_time}}</td>
-        </tr>
-        <tr>
-            <td>Major.minor version:</td><td>{{major_ver}}.{{minor_ver}}</td>
-            <td>Block reward:</td><td>{{blk_reward}}</td>
-            <td>Block size [kB]:</td><td>{{blk_size}}</td>
-        </tr>
-        <tr>
-            <td>nonce:</td><td>{{blk_nonce}}</td>
-            <td>Total fees:</td><td>{{sum_fees}}</td>
-            <td>No of txs:</td><td>{{no_txs}}</td>
-        </tr>
-    </table>
-
-    <h3>Miner reward transaction</h3>
-    <table class="center">
-        <tr>
-            <td>hash</td>
-            <td>outputs</td>
-            <td>size [kB]</td>
-            <td>version</td>
-        </tr>
-        {{#coinbase_txs}}
+          <table class="table center">
             <tr>
-                <td><a href="/tx/{{hash}}">{{hash}}</a>
+              <td>Timestamp [UCT] (epoch):</td><td>{{blk_timestamp}} ({{blk_timestamp_epoch}})</td>
+              <td>Age {{age_format}}:</td><td>{{blk_age}}</td>
+              <td>Δ [h:m:s]:</td><td>{{delta_time}}</td>
+            </tr>
+            <tr>
+              <td>Major.minor version:</td><td>{{major_ver}}.{{minor_ver}}</td>
+              <td>Block reward:</td><td>{{blk_reward}}</td>
+              <td>Block size [kB]:</td><td>{{blk_size}}</td>
+            </tr>
+            <tr>
+              <td>nonce:</td><td>{{blk_nonce}}</td>
+              <td>Total fees:</td><td>{{sum_fees}}</td>
+              <td>No of txs:</td><td>{{no_txs}}</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Miner reward transaction
+      </div>
+      <div class="panel-body">
+        <div class="table-responsive center">
+
+
+          <table class="center">
+            <tr>
+              <td>hash</td>
+              <td>outputs</td>
+              <td>size [kB]</td>
+              <td>version</td>
+            </tr>
+            {{#coinbase_txs}}
+            <tr>
+              <td><a href="/tx/{{hash}}">{{hash}}</a>
                 <td>{{sum_outputs}}</td>
                 <td>{{tx_size}}</td>
                 <td>{{version}}</td>
             </tr>
-        {{/coinbase_txs}}
+            {{/coinbase_txs}}
 
-    </table>
+          </table>
+        </div>
+      </div>
+    </div>
 
 
 
-    <h3>Transactions ({{no_txs}})</h3>
-    {{#have_txs}}
-        <table class="center" style="width:80%">
-            <tr>
-                <td>hash</td>
-                <td>outputs</td>
-                <td>fee</td>
-                <td>ring size</td>
-                <td>in/out</td>
-                <td>size [kB]</td>
-                <td>version</td>
-            </tr>
-            {{#blk_txs}}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Transactions ({{no_txs}})
+      </div>
+      <div class="panel-body">
+        <div class="table-responsive center">
+        {{#have_txs}}
+            <table class="center" style="width:80%">
                 <tr>
-                    <td><a href="/tx/{{hash}}">{{hash}}</a></td>
-                    <td>{{sum_outputs}}</td>
-                    <td>{{tx_fee}}</td>
-                    <td>{{mixin}}</td>
-                    <td>{{no_inputs}}/{{no_outputs}}</td>
-                    <td>{{tx_size}}</td>
-                    <td>{{version}}</td>
+                    <td>hash</td>
+                    <td>outputs</td>
+                    <td>fee</td>
+                    <td>ring size</td>
+                    <td>in/out</td>
+                    <td>size [kB]</td>
+                    <td>version</td>
                 </tr>
-            {{/blk_txs}}
-        </table>
-    {{/have_txs}}
-
+                {{#blk_txs}}
+                    <tr>
+                        <td><a href="/tx/{{hash}}">{{hash}}</a></td>
+                        <td>{{sum_outputs}}</td>
+                        <td>{{tx_fee}}</td>
+                        <td>{{mixin}}</td>
+                        <td>{{no_inputs}}/{{no_outputs}}</td>
+                        <td>{{tx_size}}</td>
+                        <td>{{version}}</td>
+                    </tr>
+                {{/blk_txs}}
+            </table>
+        {{/have_txs}}
+        </div>
+      </div>
+    </div>
 </div>
