--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -200,14 +200,18 @@ th {
 	font-weight: bold;
   white-space: nowrap;
 }
+#bootstrap-overrides .panel-default {
+    border-color: #333;
+}
 
-.panel-heading {
+#bootstrap-overrides .panel-default > .panel-heading {
     color: #fff;
     background-color: #333;
     border-color: #333;
     font-size: 16px;
     text-align: center;
 }
+
 .form-control {
   border: 1px solid #03a678;
   border-radius: 4px;
