--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -9,32 +9,6 @@
   <div class="panel panel-default">
     <div class="panel-heading">Transaction details</div>
     <div class="panel-body">
-      <H4 style="margin:5px">Tx hash: {{tx_hash}}</H4>
-      {{#enable_mixins_details}}
-          <H5 style="margin:5px">Tx prefix hash: {{tx_prefix_hash}}</H5>
-      {{/enable_mixins_details}}
-      <H5 style="margin:5px">Tx public key: {{tx_pub_key}}</H5>
-
-      {{#has_payment_id}}
-          <H5 style="margin:5px">Payment id: {{payment_id}}</H5>
-          <H5 style="margin:5px">Payment id as ascii ([a-zA-Z0-9 /!]): {{payment_id_as_ascii}}</H5>
-      {{/has_payment_id}}
-
-      {{#has_payment_id8}}
-          <H5 style="margin:5px">Payment id (encrypted): {{payment_id8}}</H5>
-      {{/has_payment_id8}}
-
-
-      {{#have_prev_hash}}
-          <H5>Previous tx: <a href="/tx/{{prev_hash}}">{{prev_hash}}</a></H5>
-      {{/have_prev_hash}}
-
-      {{#have_next_hash}}
-          <H5>Next tx: <a href="/tx/{{next_hash}}">{{next_hash}}</a></H5>
-      {{/have_next_hash}}
-
-
-
       <table class="table center" style="width: 80%; margin-top:10px">
           {{^have_raw_tx}}
             <tr>
@@ -53,11 +27,47 @@
               <td>No of confirmations: {{confirmations}}</td>
               <td>RingCT/type:  {{#is_ringct}}yes/{{rct_type}}{{/is_ringct}}{{^is_ringct}}no{{/is_ringct}}</td>
           </tr>
-
-
+      </table>
+      <table class="table center" style="width: 80%; margin-top:10px">
           <tr>
-              <td colspan="3">Extra: {{extra}}</td>
+            <td>Extra</td>
+            <td>{{extra}}</td>
           </tr>
+          <tr>
+            <td>Tx hash</td><td>{{tx_hash}}</td>
+          </tr>
+          {{#enable_mixins_details}}
+          <tr>
+            <td>Tx prefix hash</td><td>{{tx_prefix_hash}}</td>
+          </tr>
+          {{/enable_mixins_details}}
+          <tr>
+            <td>Tx public key</td><td>{{tx_pub_key}}</td>
+          </tr>
+          {{#has_payment_id}}
+          <tr>
+            <td>Payment id<td>{{payment_id}}</td>
+          </tr>
+          <tr>
+            <td>Payment id (ascii)</td><td>{{payment_id_as_ascii}}</td>
+          </tr>
+          {{/has_payment_id}}
+
+        {{#has_payment_id8}}
+          <tr>
+            <td>Payment id (encrypted)</td><td>{{payment_id8}}</td>
+          </tr>
+        {{/has_payment_id8}}
+
+
+      {{#have_prev_hash}}
+          <H5>Previous tx: <a href="/tx/{{prev_hash}}">{{prev_hash}}</a></H5>
+      {{/have_prev_hash}}
+
+      {{#have_next_hash}}
+          <H5>Next tx: <a href="/tx/{{next_hash}}">{{next_hash}}</a></H5>
+      {{/have_next_hash}}
+
       </table>
   </div>
   </div>
